sendOrder section + reworked traystructure + .static for storyline + fixed input-appearance on mobile safari

--- a/app/less/common.less
+++ b/app/less/common.less
@@ -271,6 +271,10 @@ body > .ng-scope {overflow-x: hidden;}
 
 p {
 	padding: 10px @bodyPadding;
+
+	a {
+		text-decoration: underline;
+	}
 }
 
 .callToAction {
@@ -396,6 +400,9 @@ input[type="text"], textarea {
 	padding: 10px 10px 8px;
 	.border-radius(3px);
 	color: @onNoteColor;
+	outline: none;
+	.box-shadow(none);
+	-webkit-appearance: none;
 }
 
 
